src/kill.parser.js

kill = {};

kill.parser = (function() {
    /*
     * Generated by PEG.js 0.8.0.
     *
     * http://pegjs.majda.cz/
     */

    function peg$subclass(child, parent) {
        function ctor() { this.constructor = child; }
        ctor.prototype = parent.prototype;
        child.prototype = new ctor();
    }

    function SyntaxError(message, expected, found, offset, line, column) {
        this.message  = message;
        this.expected = expected;
        this.found    = found;
        this.offset   = offset;
        this.line     = line;
        this.column   = column;

        this.name     = "SyntaxError";
    }

    peg$subclass(SyntaxError, Error);

    function parse(input) {
        var options = arguments.length > 1 ? arguments[1] : {},

            peg$FAILED = {},

            peg$startRuleFunctions = { start: peg$parsestart },
            peg$startRuleFunction  = peg$parsestart,

            peg$c0 = peg$FAILED,
            peg$c1 = [],
            peg$c2 = function(stmt) {return stmt},
            peg$c3 = null,
            peg$c4 = function(stmt, stmts) {return [stmt].concat(stmts)},
            peg$c5 = function(stmt) {return stmt;},
            peg$c6 = /^[^#\n]/,
            peg$c7 = { type: "class", value: "[^#\\n]", description: "[^#\\n]" },
            peg$c8 = function() {return [];},
            peg$c9 = function(l) {return l},
            peg$c10 = function(_if, cond, then, _else) {return [_if, cond, then, _else];},
            peg$c11 = "(",
            peg$c12 = { type: "literal", value: "(", description: "\"(\"" },
            peg$c13 = ")",
            peg$c14 = { type: "literal", value: ")", description: "\")\"" },
            peg$c15 = function(e) {return e},
            peg$c16 = function(es) { return ["begin"].concat(es);},
            peg$c17 = function(f) {return f.length&&f[0]=="list"?[f]:f;},
            peg$c18 = function(l, rs) { return rs.length? rs.reduce(function(l,r){return [l].concat(r);},l) : [l];},
            peg$c19 = function(let, bs) {return [let, bs];},
            peg$c20 = function(b) {return b;},
            peg$c21 = function(b, bs) {return [b].concat(bs);},
            peg$c22 = function(name, exp) {return [name, exp];},
            peg$c23 = function(ps, exp) {return ["lambda", ps?[ps]:[], exp];},
            peg$c24 = function(p, exp) {return ["lambda",[p],exp]},
            peg$c25 = function(p, l) {return ["lambda",[p], l]},
            peg$c26 = "\\(",
            peg$c27 = { type: "literal", value: "\\(", description: "\"\\\\(\"" },
            peg$c28 = function(id) {return id;},
            peg$c29 = function(id, ids, exp) {return ["uc_lambda", [id].concat(ids),exp]},
            peg$c30 = function(set, id, exp) {return [set, id, exp];},
            peg$c31 = "\n",
            peg$c32 = { type: "literal", value: "\n", description: "\"\\n\"" },
            peg$c33 = "\\",
            peg$c34 = { type: "literal", value: "\\", description: "\"\\\\\"" },
            peg$c35 = /^[_a-zA-Z?!+\-*\/%\^$&]/,
            peg$c36 = { type: "class", value: "[_a-zA-Z?!+\\-*\\/%\\^$&]", description: "[_a-zA-Z?!+\\-*\\/%\\^$&]" },
            peg$c37 = function(id) {return ["if","let","begin", "then", "else", "set!", "--"].indexOf(id.join("")) == -1 },
            peg$c38 = void 0,
            peg$c39 = function(id) { return id.join("");},
            peg$c40 = /^[0-9]/,
            peg$c41 = { type: "class", value: "[0-9]", description: "[0-9]" },
            peg$c42 = function(ds) {return parseInt(ds.join(""),10);},
            peg$c43 = function(e, es) {return es.length? [e].concat(es): [e];},
            peg$c44 = "[",
            peg$c45 = { type: "literal", value: "[", description: "\"[\"" },
            peg$c46 = "]",
            peg$c47 = { type: "literal", value: "]", description: "\"]\"" },
            peg$c48 = function(l) {return ["list",l];},
            peg$c49 = function(l) {return l;},
            peg$c50 = function(exp, l) {return l?[exp].concat(l):[exp]},
            peg$c51 = function() {return undefined;},
            peg$c52 = "true",
            peg$c53 = { type: "literal", value: "true", description: "\"true\"" },
            peg$c54 = "false",
            peg$c55 = { type: "literal", value: "false", description: "\"false\"" },
            peg$c56 = function(bool) {return bool == "true";},
            peg$c57 = function(exp) {return ["quote"].concat(exp);},
            peg$c58 = "'",
            peg$c59 = { type: "literal", value: "'", description: "\"'\"" },
            peg$c60 = "let",
            peg$c61 = { type: "literal", value: "let", description: "\"let\"" },
            peg$c62 = "if",
            peg$c63 = { type: "literal", value: "if", description: "\"if\"" },
            peg$c64 = "then",
            peg$c65 = { type: "literal", value: "then", description: "\"then\"" },
            peg$c66 = "else",
            peg$c67 = { type: "literal", value: "else", description: "\"else\"" },
            peg$c68 = "begin",
            peg$c69 = { type: "literal", value: "begin", description: "\"begin\"" },
            peg$c70 = "end",
            peg$c71 = { type: "literal", value: "end", description: "\"end\"" },
            peg$c72 = "set!",
            peg$c73 = { type: "literal", value: "set!", description: "\"set!\"" },
            peg$c74 = "--",
            peg$c75 = { type: "literal", value: "--", description: "\"--\"" },
            peg$c76 = ":=",
            peg$c77 = { type: "literal", value: ":=", description: "\":=\"" },
            peg$c78 = "->",
            peg$c79 = { type: "literal", value: "->", description: "\"->\"" },
            peg$c80 = /^[ \t]/,
            peg$c81 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
            peg$c82 = ";",
            peg$c83 = { type: "literal", value: ";", description: "\";\"" },
            peg$c84 = ",",
            peg$c85 = { type: "literal", value: ",", description: "\",\"" },

            peg$currPos          = 0,
            peg$reportedPos      = 0,
            peg$cachedPos        = 0,
            peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
            peg$maxFailPos       = 0,
            peg$maxFailExpected  = [],
            peg$silentFails      = 0,

            peg$result;

        if ("startRule" in options) {
            if (!(options.startRule in peg$startRuleFunctions)) {
                throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
            }

            peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
        }

        function text() {
            return input.substring(peg$reportedPos, peg$currPos);
        }

        function offset() {
            return peg$reportedPos;
        }

        function line() {
            return peg$computePosDetails(peg$reportedPos).line;
        }

        function column() {
            return peg$computePosDetails(peg$reportedPos).column;
        }

        function expected(description) {
            throw peg$buildException(
                null,
                [{ type: "other", description: description }],
                peg$reportedPos
            );
        }

        function error(message) {
            throw peg$buildException(message, null, peg$reportedPos);
        }

        function peg$computePosDetails(pos) {
            function advance(details, startPos, endPos) {
                var p, ch;

                for (p = startPos; p < endPos; p++) {
                    ch = input.charAt(p);
                    if (ch === "\n") {
                        if (!details.seenCR) { details.line++; }
                        details.column = 1;
                        details.seenCR = false;
                    } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
                        details.line++;
                        details.column = 1;
                        details.seenCR = true;
                    } else {
                        details.column++;
                        details.seenCR = false;
                    }
                }
            }

            if (peg$cachedPos !== pos) {
                if (peg$cachedPos > pos) {
                    peg$cachedPos = 0;
                    peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
                }
                advance(peg$cachedPosDetails, peg$cachedPos, pos);
                peg$cachedPos = pos;
            }

            return peg$cachedPosDetails;
        }

        function peg$fail(expected) {
            if (peg$currPos < peg$maxFailPos) { return; }

            if (peg$currPos > peg$maxFailPos) {
                peg$maxFailPos = peg$currPos;
                peg$maxFailExpected = [];
            }

            peg$maxFailExpected.push(expected);
        }

        function peg$buildException(message, expected, pos) {
            function cleanupExpected(expected) {
                var i = 1;

                expected.sort(function(a, b) {
                    if (a.description < b.description) {
                        return -1;
                    } else if (a.description > b.description) {
                        return 1;
                    } else {
                        return 0;
                    }
                });

                while (i < expected.length) {
                    if (expected[i - 1] === expected[i]) {
                        expected.splice(i, 1);
                    } else {
                        i++;
                    }
                }
            }

            function buildMessage(expected, found) {
                function stringEscape(s) {
                    function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

                    return s
                        .replace(/\\/g,   '\\\\')
                        .replace(/"/g,    '\\"')
                        .replace(/\x08/g, '\\b')
                        .replace(/\t/g,   '\\t')
                        .replace(/\n/g,   '\\n')
                        .replace(/\f/g,   '\\f')
                        .replace(/\r/g,   '\\r')
                        .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
                        .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
                        .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
                        .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
                }

                var expectedDescs = new Array(expected.length),
                    expectedDesc, foundDesc, i;

                for (i = 0; i < expected.length; i++) {
                    expectedDescs[i] = expected[i].description;
                }

                expectedDesc = expected.length > 1
                    ? expectedDescs.slice(0, -1).join(", ")
                    + " or "
                    + expectedDescs[expected.length - 1]
                    : expectedDescs[0];

                foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

                return "Expected " + expectedDesc + " but " + foundDesc + " found.";
            }

            var posDetails = peg$computePosDetails(pos),
                found      = pos < input.length ? input.charAt(pos) : null;

            if (expected !== null) {
                cleanupExpected(expected);
            }

            return new SyntaxError(
                    message !== null ? message : buildMessage(expected, found),
                expected,
                found,
                pos,
                posDetails.line,
                posDetails.column
            );
        }

        function peg$parsestart() {
            var s0;

            s0 = peg$parsestmts();

            return s0;
        }

        function peg$parsestmts() {
            var s0, s1, s2, s3, s4, s5;

            s0 = peg$currPos;
            s1 = peg$parsestmt();
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$currPos;
                s4 = peg$parsedelim();
                if (s4 !== peg$FAILED) {
                    s5 = peg$parsestmt();
                    if (s5 !== peg$FAILED) {
                        peg$reportedPos = s3;
                        s4 = peg$c2(s5);
                        s3 = s4;
                    } else {
                        peg$currPos = s3;
                        s3 = peg$c0;
                    }
                } else {
                    peg$currPos = s3;
                    s3 = peg$c0;
                }
                while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$currPos;
                    s4 = peg$parsedelim();
                    if (s4 !== peg$FAILED) {
                        s5 = peg$parsestmt();
                        if (s5 !== peg$FAILED) {
                            peg$reportedPos = s3;
                            s4 = peg$c2(s5);
                            s3 = s4;
                        } else {
                            peg$currPos = s3;
                            s3 = peg$c0;
                        }
                    } else {
                        peg$currPos = s3;
                        s3 = peg$c0;
                    }
                }
                if (s2 !== peg$FAILED) {
                    s3 = peg$parsedelim();
                    if (s3 === peg$FAILED) {
                        s3 = peg$c3;
                    }
                    if (s3 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c4(s1, s2);
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parsestmt() {
            var s0, s1, s2, s3;

            s0 = peg$currPos;
            s1 = [];
            s2 = peg$parseblank();
            while (s2 !== peg$FAILED) {
                s1.push(s2);
                s2 = peg$parseblank();
            }
            if (s1 !== peg$FAILED) {
                s2 = peg$parselet();
                if (s2 === peg$FAILED) {
                    s2 = peg$parseexp();
                }
                if (s2 !== peg$FAILED) {
                    s3 = peg$parsecomment();
                    if (s3 === peg$FAILED) {
                        s3 = peg$c3;
                    }
                    if (s3 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c5(s2);
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }
            if (s0 === peg$FAILED) {
                s0 = peg$parsecomment();
                if (s0 === peg$FAILED) {
                    s0 = [];
                }
            }

            return s0;
        }

        function peg$parsecomment() {
            var s0, s1, s2, s3, s4;

            s0 = peg$currPos;
            s1 = [];
            s2 = peg$parseblank();
            while (s2 !== peg$FAILED) {
                s1.push(s2);
                s2 = peg$parseblank();
            }
            if (s1 !== peg$FAILED) {
                s2 = peg$parset_comment();
                if (s2 !== peg$FAILED) {
                    s3 = [];
                    if (peg$c6.test(input.charAt(peg$currPos))) {
                        s4 = input.charAt(peg$currPos);
                        peg$currPos++;
                    } else {
                        s4 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c7); }
                    }
                    if (s4 !== peg$FAILED) {
                        while (s4 !== peg$FAILED) {
                            s3.push(s4);
                            if (peg$c6.test(input.charAt(peg$currPos))) {
                                s4 = input.charAt(peg$currPos);
                                peg$currPos++;
                            } else {
                                s4 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c7); }
                            }
                        }
                    } else {
                        s3 = peg$c0;
                    }
                    if (s3 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c8();
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parseexp() {
            var s0;

            s0 = peg$parseif();
            if (s0 === peg$FAILED) {
                s0 = peg$parsebegin();
                if (s0 === peg$FAILED) {
                    s0 = peg$parseset();
                    if (s0 === peg$FAILED) {
                        s0 = peg$parsesquote();
                        if (s0 === peg$FAILED) {
                            s0 = peg$parseinfixexp();
                        }
                    }
                }
            }

            return s0;
        }

        function peg$parseinfixexp() {
            var s0, s1;

            s0 = peg$currPos;
            s1 = peg$parselexp();
            if (s1 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c9(s1);
            }
            s0 = s1;

            return s0;
        }

        function peg$parselexp() {
            var s0;

            s0 = peg$parselambda();
            if (s0 === peg$FAILED) {
                s0 = peg$parsefexp();
            }

            return s0;
        }

        function peg$parseif() {
            var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

            s0 = peg$currPos;
            s1 = peg$parset_if();
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$parseblank();
                while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$parseblank();
                }
                if (s2 !== peg$FAILED) {
                    s3 = peg$parsefexp();
                    if (s3 !== peg$FAILED) {
                        s4 = [];
                        s5 = peg$parseblank();
                        while (s5 !== peg$FAILED) {
                            s4.push(s5);
                            s5 = peg$parseblank();
                        }
                        if (s4 !== peg$FAILED) {
                            s5 = peg$parset_then();
                            if (s5 !== peg$FAILED) {
                                s6 = [];
                                s7 = peg$parseblank();
                                while (s7 !== peg$FAILED) {
                                    s6.push(s7);
                                    s7 = peg$parseblank();
                                }
                                if (s6 !== peg$FAILED) {
                                    s7 = peg$parsefexp();
                                    if (s7 !== peg$FAILED) {
                                        s8 = [];
                                        s9 = peg$parseblank();
                                        while (s9 !== peg$FAILED) {
                                            s8.push(s9);
                                            s9 = peg$parseblank();
                                        }
                                        if (s8 !== peg$FAILED) {
                                            s9 = peg$parset_else();
                                            if (s9 !== peg$FAILED) {
                                                s10 = [];
                                                s11 = peg$parseblank();
                                                while (s11 !== peg$FAILED) {
                                                    s10.push(s11);
                                                    s11 = peg$parseblank();
                                                }
                                                if (s10 !== peg$FAILED) {
                                                    s11 = peg$parsefexp();
                                                    if (s11 !== peg$FAILED) {
                                                        peg$reportedPos = s0;
                                                        s1 = peg$c10(s1, s3, s7, s11);
                                                        s0 = s1;
                                                    } else {
                                                        peg$currPos = s0;
                                                        s0 = peg$c0;
                                                    }
                                                } else {
                                                    peg$currPos = s0;
                                                    s0 = peg$c0;
                                                }
                                            } else {
                                                peg$currPos = s0;
                                                s0 = peg$c0;
                                            }
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$c0;
                                        }
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$c0;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$c0;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$c0;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c0;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parsebegin() {
            var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

            s0 = peg$currPos;
            s1 = peg$parset_begin();
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$currPos;
                s4 = [];
                s5 = peg$parseblank();
                while (s5 !== peg$FAILED) {
                    s4.push(s5);
                    s5 = peg$parseblank();
                }
                if (s4 !== peg$FAILED) {
                    s5 = peg$parsenewline();
                    if (s5 === peg$FAILED) {
                        s5 = peg$c3;
                    }
                    if (s5 !== peg$FAILED) {
                        s6 = [];
                        s7 = peg$parseblank();
                        while (s7 !== peg$FAILED) {
                            s6.push(s7);
                            s7 = peg$parseblank();
                        }
                        if (s6 !== peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 40) {
                                s7 = peg$c11;
                                peg$currPos++;
                            } else {
                                s7 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c12); }
                            }
                            if (s7 !== peg$FAILED) {
                                s8 = peg$parseexp();
                                if (s8 !== peg$FAILED) {
                                    if (input.charCodeAt(peg$currPos) === 41) {
                                        s9 = peg$c13;
                                        peg$currPos++;
                                    } else {
                                        s9 = peg$FAILED;
                                        if (peg$silentFails === 0) { peg$fail(peg$c14); }
                                    }
                                    if (s9 !== peg$FAILED) {
                                        peg$reportedPos = s3;
                                        s4 = peg$c15(s8);
                                        s3 = s4;
                                    } else {
                                        peg$currPos = s3;
                                        s3 = peg$c0;
                                    }
                                } else {
                                    peg$currPos = s3;
                                    s3 = peg$c0;
                                }
                            } else {
                                peg$currPos = s3;
                                s3 = peg$c0;
                            }
                        } else {
                            peg$currPos = s3;
                            s3 = peg$c0;
                        }
                    } else {
                        peg$currPos = s3;
                        s3 = peg$c0;
                    }
                } else {
                    peg$currPos = s3;
                    s3 = peg$c0;
                }
                if (s3 !== peg$FAILED) {
                    while (s3 !== peg$FAILED) {
                        s2.push(s3);
                        s3 = peg$currPos;
                        s4 = [];
                        s5 = peg$parseblank();
                        while (s5 !== peg$FAILED) {
                            s4.push(s5);
                            s5 = peg$parseblank();
                        }
                        if (s4 !== peg$FAILED) {
                            s5 = peg$parsenewline();
                            if (s5 === peg$FAILED) {
                                s5 = peg$c3;
                            }
                            if (s5 !== peg$FAILED) {
                                s6 = [];
                                s7 = peg$parseblank();
                                while (s7 !== peg$FAILED) {
                                    s6.push(s7);
                                    s7 = peg$parseblank();
                                }
                                if (s6 !== peg$FAILED) {
                                    if (input.charCodeAt(peg$currPos) === 40) {
                                        s7 = peg$c11;
                                        peg$currPos++;
                                    } else {
                                        s7 = peg$FAILED;
                                        if (peg$silentFails === 0) { peg$fail(peg$c12); }
                                    }
                                    if (s7 !== peg$FAILED) {
                                        s8 = peg$parseexp();
                                        if (s8 !== peg$FAILED) {
                                            if (input.charCodeAt(peg$currPos) === 41) {
                                                s9 = peg$c13;
                                                peg$currPos++;
                                            } else {
                                                s9 = peg$FAILED;
                                                if (peg$silentFails === 0) { peg$fail(peg$c14); }
                                            }
                                            if (s9 !== peg$FAILED) {
                                                peg$reportedPos = s3;
                                                s4 = peg$c15(s8);
                                                s3 = s4;
                                            } else {
                                                peg$currPos = s3;
                                                s3 = peg$c0;
                                            }
                                        } else {
                                            peg$currPos = s3;
                                            s3 = peg$c0;
                                        }
                                    } else {
                                        peg$currPos = s3;
                                        s3 = peg$c0;
                                    }
                                } else {
                                    peg$currPos = s3;
                                    s3 = peg$c0;
                                }
                            } else {
                                peg$currPos = s3;
                                s3 = peg$c0;
                            }
                        } else {
                            peg$currPos = s3;
                            s3 = peg$c0;
                        }
                    }
                } else {
                    s2 = peg$c0;
                }
                if (s2 !== peg$FAILED) {
                    s3 = [];
                    s4 = peg$parseblank();
                    while (s4 !== peg$FAILED) {
                        s3.push(s4);
                        s4 = peg$parseblank();
                    }
                    if (s3 !== peg$FAILED) {
                        s4 = peg$parsedelim();
                        if (s4 !== peg$FAILED) {
                            peg$reportedPos = s0;
                            s1 = peg$c16(s2);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c0;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parsefexp() {
            var s0, s1, s2, s3, s4, s5, s6;

            s0 = peg$currPos;
            s1 = peg$parseaexp();
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$parseblank();
                while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$parseblank();
                }
                if (s2 !== peg$FAILED) {
                    s3 = [];
                    s4 = peg$currPos;
                    s5 = [];
                    s6 = peg$parseblank();
                    while (s6 !== peg$FAILED) {
                        s5.push(s6);
                        s6 = peg$parseblank();
                    }
                    if (s5 !== peg$FAILED) {
                        s6 = peg$parseaexp();
                        if (s6 !== peg$FAILED) {
                            peg$reportedPos = s4;
                            s5 = peg$c17(s6);
                            s4 = s5;
                        } else {
                            peg$currPos = s4;
                            s4 = peg$c0;
                        }
                    } else {
                        peg$currPos = s4;
                        s4 = peg$c0;
                    }
                    while (s4 !== peg$FAILED) {
                        s3.push(s4);
                        s4 = peg$currPos;
                        s5 = [];
                        s6 = peg$parseblank();
                        while (s6 !== peg$FAILED) {
                            s5.push(s6);
                            s6 = peg$parseblank();
                        }
                        if (s5 !== peg$FAILED) {
                            s6 = peg$parseaexp();
                            if (s6 !== peg$FAILED) {
                                peg$reportedPos = s4;
                                s5 = peg$c17(s6);
                                s4 = s5;
                            } else {
                                peg$currPos = s4;
                                s4 = peg$c0;
                            }
                        } else {
                            peg$currPos = s4;
                            s4 = peg$c0;
                        }
                    }
                    if (s3 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c18(s1, s3);
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parseaexp() {
            var s0;

            s0 = peg$parseliteral();
            if (s0 === peg$FAILED) {
                s0 = peg$parseidentifier();
                if (s0 === peg$FAILED) {
                    s0 = peg$parsequote();
                }
            }

            return s0;
        }

        function peg$parselet() {
            var s0, s1, s2, s3;

            s0 = peg$currPos;
            s1 = peg$parset_let();
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$parseblank();
                if (s3 !== peg$FAILED) {
                    while (s3 !== peg$FAILED) {
                        s2.push(s3);
                        s3 = peg$parseblank();
                    }
                } else {
                    s2 = peg$c0;
                }
                if (s2 !== peg$FAILED) {
                    s3 = peg$parsebindings();
                    if (s3 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c19(s1, s3);
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parsebindings() {
            var s0, s1, s2, s3, s4, s5, s6;

            s0 = peg$currPos;
            s1 = peg$parsebinding();
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$currPos;
                s4 = peg$parsesep();
                if (s4 !== peg$FAILED) {
                    s5 = [];
                    s6 = peg$parseblank();
                    while (s6 !== peg$FAILED) {
                        s5.push(s6);
                        s6 = peg$parseblank();
                    }
                    if (s5 !== peg$FAILED) {
                        s6 = peg$parsebinding();
                        if (s6 !== peg$FAILED) {
                            peg$reportedPos = s3;
                            s4 = peg$c20(s6);
                            s3 = s4;
                        } else {
                            peg$currPos = s3;
                            s3 = peg$c0;
                        }
                    } else {
                        peg$currPos = s3;
                        s3 = peg$c0;
                    }
                } else {
                    peg$currPos = s3;
                    s3 = peg$c0;
                }
                while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$currPos;
                    s4 = peg$parsesep();
                    if (s4 !== peg$FAILED) {
                        s5 = [];
                        s6 = peg$parseblank();
                        while (s6 !== peg$FAILED) {
                            s5.push(s6);
                            s6 = peg$parseblank();
                        }
                        if (s5 !== peg$FAILED) {
                            s6 = peg$parsebinding();
                            if (s6 !== peg$FAILED) {
                                peg$reportedPos = s3;
                                s4 = peg$c20(s6);
                                s3 = s4;
                            } else {
                                peg$currPos = s3;
                                s3 = peg$c0;
                            }
                        } else {
                            peg$currPos = s3;
                            s3 = peg$c0;
                        }
                    } else {
                        peg$currPos = s3;
                        s3 = peg$c0;
                    }
                }
                if (s2 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c21(s1, s2);
                    s0 = s1;
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parsebinding() {
            var s0, s1, s2, s3, s4, s5;

            s0 = peg$currPos;
            s1 = peg$parseidentifier();
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$parseblank();
                while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$parseblank();
                }
                if (s2 !== peg$FAILED) {
                    s3 = peg$parseop_assign();
                    if (s3 !== peg$FAILED) {
                        s4 = [];
                        s5 = peg$parseblank();
                        while (s5 !== peg$FAILED) {
                            s4.push(s5);
                            s5 = peg$parseblank();
                        }
                        if (s4 !== peg$FAILED) {
                            s5 = peg$parseexp();
                            if (s5 !== peg$FAILED) {
                                peg$reportedPos = s0;
                                s1 = peg$c22(s1, s5);
                                s0 = s1;
                            } else {
                                peg$currPos = s0;
                                s0 = peg$c0;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c0;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parselambda() {
            var s0, s1, s2, s3, s4, s5, s6;
